data/derived/comb/progs/unify/prog4643.ml.out
Characters 128-133:
  let seen' = if List.mem (h,seen)=false then [h]@seen' in
                                   ^^^^^
Error: This expression has type bool but an expression was expected of type
         ('a * 'b) list -> bool
